# OpenERF

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  imagenet_val_1000.txt  pyproject.toml  requirements.txt
OpenERF/: __init__.py  api.py  erf.py  feature_ops.py  fit.py  metrics.py
OpenERF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: example.py
results_debug/: results_ds_store
results_metrics/: OpenERF_beit_base_patch16_224.in22k_ft_in22k_in1k_metrics.json  OpenERF_beit_base_patch16_224.in22k_ft_in22k_metrics.json  OpenERF_beit_base_patch16_384.in22k_ft_in22k_in1k_metrics.json  OpenERF_cait_s24_224.fb_dist_in1k_metrics.json  OpenERF_cait_xxs24_224.fb_dist_in1k_metrics.json  OpenERF_cait_xxs36_224.fb_dist_in1k_metrics.json  OpenERF_deit_base_patch16_224.fb_in1k_metrics.json  OpenERF_deit_small_patch16_224.fb_in1k_metrics.json  OpenERF_deit_tiny_patch16_224.fb_in1k_metrics.json  OpenERF_resnet101.a1_in1k_metrics.json  OpenERF_swin_base_patch4_window7_224.ms_in1k_metrics.json  OpenERF_swin_small_patch4_window7_224.ms_in1k_metrics.json  OpenERF_swin_tiny_patch4_window7_224.ms_in1k_metrics.json  OpenERF_swinv2_cr_small_224.sw_in1k_metrics.json  OpenERF_swinv2_cr_small_ns_224.sw_in1k_metrics.json  OpenERF_swinv2_cr_tiny_ns_224.sw_in1k_metrics.json  OpenERF_xcit_medium_24_p16_224.fb_in1k_metrics.json  OpenERF_xcit_small_12_p16_224.fb_in1k_metrics.json  OpenERF_xcit_tiny_12_p16_224.fb_in1k_metrics.json
results_npy/: OpenERF_beit_base_patch16_224.in22k_ft_in22k.npy  OpenERF_beit_base_patch16_224.in22k_ft_in22k_in1k.npy  OpenERF_beit_base_patch16_384.in22k_ft_in22k_in1k.npy  OpenERF_cait_s24_224.fb_dist_in1k.npy  OpenERF_cait_xxs24_224.fb_dist_in1k.npy  OpenERF_cait_xxs36_224.fb_dist_in1k.npy  OpenERF_deit_base_patch16_224.fb_in1k.npy  OpenERF_deit_small_patch16_224.fb_in1k.npy  OpenERF_deit_tiny_patch16_224.fb_in1k.npy  OpenERF_resnet101.a1_in1k.npy  OpenERF_swin_base_patch4_window7_224.ms_in1k.npy  OpenERF_swin_small_patch4_window7_224.ms_in1k.npy  OpenERF_swinv2_cr_small_224.sw_in1k.npy  (+6 more)
(+40 files in other folders)
